css/main.css
/* ==========================================================================
   Author's ntustom styles
   ========================================================================== */

/*------------------- MISC -------------------*/

html, body {
    /*font-family: Open Sans;*/
    /*font-family: UTM Aptima;*/
    /*font-family: Didot LT Std;*/
    /*font-family: UTM Centur;*/
    /*font-family: Baskerville;*/
    /*font-family: Lucida Grand*/
    /*font-family: Bitstream Vera Serif;*/
    font-family: "Droid Serif", serif;
    font-size: 16px;
    line-height: 1.5em;
    background-color: #FFFEDF;
    min-height: 100%;
}

body {
    border-top: 20px solid;
    position: absolute;
    top: 0;
    width: 100%;
    padding-top: 0px;
    margin-top: 0;
    background-image: url("/img/natural_paper.png");
    background-repeat: repeat;
    padding-left: 0;
    padding-right: 0;
}

h1, h2, h3, h4, h5, h6 {
    font-family: UTM Aptima;
}

.container-narrow {
    margin: 0 auto;
    max-width: 640px;
    height: auto;
    min-height: 100%;
}

.center {
    text-align: center;
}

* {
    transition: all 0.45s ease 0s;
    -moz-transition: all 0.45s ease 0s;
    -webkit-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
}

/* Content selection color */
.content *::selection {
    background: #DFBA69;
    color: #FFFEDF;
}

.content *::-moz-selection {
    background: #DFBA69;
    color: #FFFEDF;
}

.content .divider *::selection {
    background: #FFFEDF;
    color: #DFBA69;
}

.content .divider *::-moz-selection {
    background: #FFFEDF;
    color: #DFBA69;
}


.content a {
    color: #5A2E2E;
}

.content a:hover {
    color: inherit;
}



/*------------------- HEADER -------------------*/



.svg header.main-header {
    background-image: url("/img/fleur-pattern.svg");
}

.no-svg header.main-header {
    background-image: url("/img/fleur-pattern.png");
}

header.main-header {
    /*background-color: #5A2E2E;*/
    background-position: left bottom;
    color: #FFFEDF;
    padding-bottom: 5px;
}

header.main-header *::selection {
    background: #FFFEDF;
    color: #5A2E2E;
}

header.main-header *::-moz-selection {
    background: #FFFEDF;
    color: #5A2E2E;
}

header.main-header h4 {
    margin: 5px;
}

header.main-header .tagline {
    border-top: 1px solid;
    border-bottom: 1px solid;
    font-size: 12px;
    padding-left: 40px;
}

header.main-header .ornament {
    height: 50px;
}

header.main-header .brand {
    padding-top: 15px;
    margin-bottom: -50px;
    min-height: 168px;
    /*margin-left: -45px;*/
}

header.main-header .brand object {
    min-height: 161px;
}

.tagline {
    margin-bottom: 12px;
    font-family: UTM Aptima;
}

.tagline .row {
    padding-top: 2px;
    padding-bottom: 5px;
}

.svg .nav-container {
    background-image: url("/img/fleur-pattern.svg");
}

.no-svg .nav-container {
    background-image: url("/img/fleur-pattern.png");
}



/*------------------- NAVBAR -------------------*/



.nav-container {
    /*background-color: #5A2E2E;*/
    color: #FFFEDF;
    width: 100%;
    padding-top: 4px;
    padding-bottom: 5px;
    margin-bottom: 30px;
    box-shadow: 0 3px 3px -3px #000, 0 -3px 10px -5px #333 inset;
}

.nav-container .navbar {
    margin: 0 auto;
    z-index: 888;
}

.navbar-inner {
    background-image: none;
    background-repeat: no-repeat;
    background-color: inherit;
    filter: none;
    border: 0;
    min-height: 0;
}

.navbar-inner .nav {
    margin: 0 auto;
    float: none;
}

@media (min-width: 640px) {
    .navbar-inner {
        text-align: center;
    }

    .navbar-inner .nav {
        display: inline-block;
        line-height: 0;
    }

    .navbar-inner .nav-collapse.collapse {
        line-height: 0;
    }
}

.navbar .nav > li {
    margin-left: 10px;
}

.navbar .nav > li > a, .menu-toggle {
    float: none;
    padding-left: 10px;
    padding-right: 10px;
    color: #FFFEDF;
    font-size: 15px;
    text-shadow: none;
    font-weight: bold;
    font-family: UTM Aptima;
    text-align: left;
}

.menu-toggle {
    padding: 9px 20px;
    border-radius: 3px 3px 3px 3px;
}

.navbar .nav > li > a:hover,
.menu-toggle:hover {
    background-color: #FFFEDF;
    color: #5A2E2E;
    font-weight: bold;
}

.navbar {
    margin: 0 auto;
}

.navbar .nav > .active > a,
.navbar .nav > .active > a:hover,
.navbar .nav > .active > a:focus,
a.menu-toggle {
    background-color: #FFFEDF;
    color: #5A2E2E;
    font-weight: bold;
    box-shadow: none;
}

.menu-toggle {
    display: none;
}

@media (max-width: 639px) {
    .menu-toggle {
        display: inline;
        float: right;
    }
}

.affix {
    top: 0;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    z-index: 999;
}



/*------------------- CAROUSEL -------------------*/



#myCarousel {
    margin: 0 auto 20px auto;
}

.carousel .carousel-control-wrapper {
    height: 350px;
    margin-top: -350px;
    position: relative;
}

.carousel a {
    color: inherit !important;
}

.carousel a:hover {
    color: #5A2E2E !important;
}

.carousel h2 {
    font-size: 40px;
    line-height: 1.2em;
    margin-top: 0;
    padding-top: 0;
    padding-bottom: 20px;
    border-bottom: 1px dotted;
}

.carousel p {
    font-size: 18px;
    line-height: 1.4em;
    margin-bottom: 1em;
}

.carousel img {
    height: 350px;
    margin-left: auto;
    margin-right: auto;
    display: block;
}



/*------------------- ABOUT US -------------------*/



@media (min-width: 980px) {
    p.who_we_are {
        padding-right: 30px;
        text-align: right;
    }

    div.what_we_do {
        margin-left: 0px;
        padding-left: 30px;
        border-left: 3px dotted #5A2E2E;
    }

    #us .span4 {
        text-align: right;
    }

    #us .span4 strong {
        padding-right: 30px;
    }

    #us .span6 {
        margin-left: 30px;
    }
}

.svg .divider {
    background-image: url("/img/fleur-pattern.svg");
}

.no-svg .divider {
    background-image: url("/img/fleur-pattern.png");
}

.divider {
    /*background-color: #5A2E2E;*/
    color: #FFFEDF;
    margin-bottom: 20px;
    margin-top: 20px;
    font-size: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
    box-shadow: 3px 3px 5px -4px #000;
    font-family: UTM Aptima;
    /*width: 980px;*/
}



/*------------------- BLOG -------------------*/



hr.fleur {
    background: url("/img/fleurdelis2.png");
    display: block;
    width: 150px;
    height: 31px;
    border-top: 0;
    border-bottom: 0;
    margin: 50px auto;
}

hr.section {
    background: url("/img/section.png");
    background-size: 30px;
    background-repeat: no-repeat;
    background-position: center top;
    display: block;
    width: 50px;
    height: 10px;
    border-top: 0;
    /*padding-bottom: 20px;
    border-bottom: 3px dotted #5A2E2E;*/
    border-bottom: 0;
    margin: 30px auto;
}

hr.footer-dotted {
    border-bottom: 2px dashed #2A2C31;
    border-top: 0;
    margin-bottom: 8px;
    margin-top: 30px;
}

hr.blog-divider {
    border-bottom: 1px dashed #5A2E2E;
    border-top: 0;
}

hr.archive-divider {
    border-bottom: 1px dashed #5A2E2E;
    border-top: 0;
    width: 160px;
}

.postimage {
    margin-right: 20px;
}

.lead {
    margin-bottom: 10px;
    font-size: 18px;
    font-weight: bold;
    line-height: 1.4em;
}

.btn.post-nav {
    margin-top: -10px;
    margin-bottom: 15px;
}

h2.post-title {
    display: inline;
}

/*------------------- FOOTER -------------------*/



footer {

    z-index: 2;
    position: absolute;
    bottom: 0;

    width: 100%;
    height: 110px;
    background-color: #2A2C31;
    color: #FFFEDF;
}

.footer-row {
    padding-top: 40px;
}

#push {
    height: 140px;
}



/*------------------- FACEBOOK -------------------*/



.fb-comments {
    margin-left: auto;
    margin-right: auto;
}

.facebook-wrapper {
    text-align: center;
}

